Switch tests to Java 21